--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,19 +36,27 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   shared_preferences: ^2.0.12
-  carousel_slider: ^4.0.0
   mvc_pattern: ^8.10.2
   shimmer: ^2.0.0
-  dio: ^4.0.0
-  equatable: ^2.0.3
-  pretty_dio_logger: ^1.1.1
-  provider: ^6.0.2
   firebase_auth: ^3.6.3
   firebase_core: ^1.20.1
   firebase_database: ^9.1.1
+  firebase_storage: ^10.3.6
   pie_chart: ^5.3.2
-#  charts_flutter: ^0.12.0
   syncfusion_flutter_charts: ^20.2.44
+  http: ^0.13.4
+  file_picker: ^4.5.1
+  open_file: ^3.2.1
+  path_provider: ^2.0.11
+  cached_network_image: ^3.2.1
+  photo_view: ^0.14.0
+  video_thumbnail: ^0.5.2
+  video_player: ^2.4.7
+  chewie: ^1.3.4
+  image_picker: ^0.8.5+3
+  signature: ^5.2.1
+  syncfusion_flutter_pdf: ^20.2.45
+  bitmap: ^0.1.2
 
 flutter_localizations:
   sdk: flutter
