--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,7 +92,7 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Schyler
+    - family: Schylers
       fonts:
         - asset: assets/font/dinregular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
